versions/0.8.0/_sources/refs/_aws-cdk_aws-codecommit.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"5cshVrEV2wigTLlkoW0BP1HR4jD4buj8Zv9RumL/FuI="}

@aws-cdk/aws-codecommit
=======================

.. mdinclude:: ./__aws-cdk_aws-codecommit.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-codecommit

Repository
^^^^^^^^^^

.. py:class:: Repository(parent, name, props)

   Provides a CodeCommit Repository


   :extends: :py:class:`~@aws-cdk/aws-codecommit.RepositoryRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-codecommit.RepositoryProps`

   .. py:method:: notify(arn, [options]) -> @aws-cdk/aws-codecommit.Repository

      Create a trigger to notify another service to run actions on repository events.


      :param arn: Arn of the resource that repository events will notify
      :type arn: string
      :param options: Trigger options to run actions
      :type options: :py:class:`~@aws-cdk/aws-codecommit.RepositoryTriggerOptions` or undefined
      :rtype: :py:class:`~@aws-cdk/aws-codecommit.Repository`


   .. py:attribute:: repositoryArn

      The ARN of this Repository. 


      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryArn` *(readonly)*


   .. py:attribute:: repositoryCloneUrlHttp

      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryCloneUrlHttp` *(readonly)*


   .. py:attribute:: repositoryCloneUrlSsh

      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryCloneUrlSsh` *(readonly)*


   .. py:attribute:: repositoryName

      The human-visible name of this Repository. 


      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryName` *(readonly)*


RepositoryArn
^^^^^^^^^^^^^

.. py:class:: RepositoryArn([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

RepositoryCloneUrlHttp
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RepositoryCloneUrlHttp([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

RepositoryCloneUrlSsh
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RepositoryCloneUrlSsh([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

RepositoryEventTrigger (enum)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RepositoryEventTrigger

   .. py:data:: All

   .. py:data:: UpdateRef

   .. py:data:: CreateRef

   .. py:data:: DeleteRef


RepositoryName
^^^^^^^^^^^^^^

.. py:class:: RepositoryName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

RepositoryProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RepositoryProps



   .. py:attribute:: repositoryName

      Name of the repository. This property is required for all repositories.


      :type: string


   .. py:attribute:: description

      A description of the repository. Use the description to identify the purpose of the repository.


      :type: string or undefined


RepositoryRef
^^^^^^^^^^^^^

.. py:class:: RepositoryRef(parent, name)

   Represents a reference to a CodeCommit Repository.  If you want to create a new Repository managed alongside your CDK code, use the {@link Repository} class.  If you want to reference an already existing Repository, use the {@link RepositoryRef.import} method.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :abstract: Yes
   :param parent: The parent construct
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string

   .. py:staticmethod:: import(parent, name, props) -> @aws-cdk/aws-codecommit.RepositoryRef

      Import a Repository defined either outside the CDK, or in a different Stack (exported with the {@link export} method).


      :param parent: the parent Construct for the Repository
      :type parent: :py:class:`@aws-cdk/cdk.Construct`
      :param name: the name of the Repository Construct
      :type name: string
      :param props: the properties used to identify the existing Repository
      :type props: :py:class:`~@aws-cdk/aws-codecommit.RepositoryRefProps`
      :return: a reference to the existing Repository
      :rtype: :py:class:`~@aws-cdk/aws-codecommit.RepositoryRef`


   .. py:method:: export() -> @aws-cdk/aws-codecommit.RepositoryRefProps

      Exports this Repository. Allows the same Repository to be used in 2 different Stacks.


      :rtype: :py:class:`~@aws-cdk/aws-codecommit.RepositoryRefProps`


   .. py:method:: onEvent(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers for repository events. Use `rule.addEventPattern(pattern)` to specify a filter.


      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: onStateChange(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers when a "CodeCommit Repository State Change" event occurs.


      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: onReferenceCreated(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers when a reference is created (i.e. a new brach/tag is created) to the repository.


      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: onReferenceUpdated(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers when a reference is updated (i.e. a commit is pushed to an existig branch) from the repository.


      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: onReferenceDeleted(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers when a reference is delete (i.e. a branch/tag is deleted) from the repository.


      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: onPullRequestStateChange(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers when a pull request state is changed.


      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: onCommentOnPullRequest(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers when a comment is made on a pull request.


      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: onCommentOnCommit(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers when a comment is made on a commit.


      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: onCommit(name, [target, [branch]]) -> @aws-cdk/aws-events.EventRule

      Defines a CloudWatch event rule which triggers when a commit is pushed to a branch.


      :param name: 
      :type name: string
      :param target: The target of the event
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param branch: The branch to monitor. Defaults to all branches.
      :type branch: string or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:attribute:: repositoryArn

      The ARN of this Repository. 


      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryArn` *(readonly)* *(abstract)*


   .. py:attribute:: repositoryName

      The human-visible name of this Repository. 


      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryName` *(readonly)* *(abstract)*


RepositoryRefProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RepositoryRefProps

   Properties for the {@link RepositoryRef.import} method.




   .. py:attribute:: repositoryName

      The name of an existing CodeCommit Repository that we are referencing. Must be in the same account and region as the root Stack.


      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryName`


RepositoryTriggerOptions (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RepositoryTriggerOptions

   Creates for a repository trigger to an SNS topic or Lambda function.




   .. py:attribute:: name

      A name for the trigger.Triggers on a repository must have unique names


      :type: string or undefined


   .. py:attribute:: events

      The repository events for which AWS CodeCommit sends information to the target, which you specified in the DestinationArn property.If you don't specify events, the trigger runs for all repository events.


      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryEventTrigger` or undefined


   .. py:attribute:: branches

      The names of the branches in the AWS CodeCommit repository that contain events that you want to include in the trigger. If you don't specify at least one branch, the trigger applies to all branches.


      :type: string or undefined


   .. py:attribute:: customData

      When an event is triggered, additional information that AWS CodeCommit includes when it sends information to the target.


      :type: string or undefined



cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-codecommit.cloudformation

RepositoryResource
~~~~~~~~~~~~~~~~~~

.. py:class:: RepositoryResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``RepositoryResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``RepositoryResource``
   :type properties: :py:class:`~@aws-cdk/aws-codecommit.cloudformation.RepositoryResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: repositoryArn

      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryArn` *(readonly)*


   .. py:attribute:: repositoryCloneUrlHttp

      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryCloneUrlHttp` *(readonly)*


   .. py:attribute:: repositoryCloneUrlSsh

      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryCloneUrlSsh` *(readonly)*


   .. py:attribute:: repositoryName

      :type: :py:class:`~@aws-cdk/aws-codecommit.RepositoryName` *(readonly)*

   .. py:class:: RepositoryTriggerProperty



      .. py:attribute:: branches

         ``RepositoryResource.RepositoryTriggerProperty.Branches``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codecommit-repository-repositorytrigger.html#cfn-codecommit-repository-repositorytrigger-branches


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: customData

         ``RepositoryResource.RepositoryTriggerProperty.CustomData``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codecommit-repository-repositorytrigger.html#cfn-codecommit-repository-repositorytrigger-customdata


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: destinationArn

         ``RepositoryResource.RepositoryTriggerProperty.DestinationArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codecommit-repository-repositorytrigger.html#cfn-codecommit-repository-repositorytrigger-destinationarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: events

         ``RepositoryResource.RepositoryTriggerProperty.Events``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codecommit-repository-repositorytrigger.html#cfn-codecommit-repository-repositorytrigger-events


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``RepositoryResource.RepositoryTriggerProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codecommit-repository-repositorytrigger.html#cfn-codecommit-repository-repositorytrigger-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



RepositoryResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: RepositoryResourceProps



   .. py:attribute:: repositoryName

      ``AWS::CodeCommit::Repository.RepositoryName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codecommit-repository.html#cfn-codecommit-repository-repositoryname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: repositoryDescription

      ``AWS::CodeCommit::Repository.RepositoryDescription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codecommit-repository.html#cfn-codecommit-repository-repositorydescription


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: triggers

      ``AWS::CodeCommit::Repository.Triggers``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codecommit-repository.html#cfn-codecommit-repository-triggers


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codecommit.cloudformation.RepositoryResource.RepositoryTriggerProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-codecommit

